--- a/docs/.vitepress/vitepress/styles/content/table-of-content.scss
+++ b/docs/.vitepress/vitepress/styles/content/table-of-content.scss
@@ -32,7 +32,7 @@
     height: calc(100vh - var(--header-height) - 32px);
     overflow-y: auto;
     scrollbar-width: none;
-    padding-bottom: 30px;
+    padding: 0 3px 30px;
 
     &__heading {
       font-size: 12px;
